deployment/k8s/prod/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compass-frontend-deployment
  namespace: compass-prod
  labels:
    app: compass-frontend
  annotations:
    forceReDeploy: "INITIAL_VALUE"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compass-frontend
  template:
    metadata:
      labels:
        app: compass-frontend
    spec:
      containers:
        - name: compass-frontend-container
          image: pm4compass/compass-frontend:latest # Update this with your frontend image tag dynamically
          ports:
            - containerPort: 3000
          env:
            - name: APP_URL
              valueFrom:
                configMapKeyRef:
                  name: compass-configmap
                  key: APP_URL
            - name: DDL_AUTO
              valueFrom:
                configMapKeyRef:
                  name: compass-configmap
                  key: DDL_AUTO
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  name: postgres-configmap
                  key: DB_HOST
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: DB_USERNAME
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: DB_PASSWORD
            - name: AUTH0_AUDIENCE
              valueFrom:
                configMapKeyRef:
                  key: AUTH0_AUDIENCE
                  name: auth0-configmap
            - name: AUTH0_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: AUTH0_BASE_URL
                  name: auth0-configmap
            - name: AUTH0_ISSUER_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: AUTH0_ISSUER_BASE_URL
                  name: auth0-configmap
            - name: AUTH0_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: AUTH0_CLIENT_ID
                  name: auth0-secrets
            - name: AUTH0_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: AUTH0_CLIENT_SECRET
                  name: auth0-secrets
            - name: AUTH0_SECRET
              valueFrom:
                secretKeyRef:
                  key: AUTH0_SECRET
                  name: auth0-secrets

      imagePullSecrets:
        - name: docker-credentials
