deployment/k8s/prod/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: compass-backend-service
  namespace: compass-prod
spec:
  selector:
    app: compass-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
