deployment/k8s/prod/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: compass-frontend-service
  namespace: compass-prod
spec:
  selector:
    app: compass-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
